# solotto-rafle-contracts

./: Anchor.toml  package-lock.json  readme.md
programs/solotto-rafle/: Cargo.toml
programs/solotto-rafle/src/: contexts.rs  errors.rs  lib.rs
tests/: solotto-rafle-contracts.ts
